# AdventOfCode2024

./: .gitignore  AoC24.cabal  CHANGELOG.md
app/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Lib.hs  Main.hs
