cabal-version:      2.4
name:               AoC24
version:            0.1.0.0

data-dir: data

extra-source-files: CHANGELOG.md

executable AoC24
    main-is:          Main.hs

    build-depends:    base ^>=4.16.4.0, array, split, containers ==0.7
    hs-source-dirs:   app
    default-language: Haskell2010

    ghc-options:
      -Wall

    other-modules:
      Lib
      Day01
      Day02
      Day03
      Day04
      Day05
